miniextendr-macros/tests/ui/derive_dataframe_enum_nested_enum_b1_custom_tag_sibling.stderr
warning: unexpected `cfg` condition value: `rayon`
  --> tests/ui/derive_dataframe_enum_nested_enum_b1_custom_tag_sibling.rs:10:24
   |
10 | #[derive(Clone, Debug, DataFrameRow)]
   |                        ^^^^^^^^^^^^
   |
   = note: expected values for `feature` are: `default-coerce`, `default-r6`, `default-s7`, `default-strict`, `default-worker`, `doc-lint`, and `vctrs`
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `DataFrameRow` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `DataFrameRow` may come from an old version of the `miniextendr_macros` crate, try updating your dependency with `cargo update -p miniextendr_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `rayon`
  --> tests/ui/derive_dataframe_enum_nested_enum_b1_custom_tag_sibling.rs:20:10
   |
20 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   |
   = note: expected values for `feature` are: `default-coerce`, `default-r6`, `default-s7`, `default-strict`, `default-worker`, `doc-lint`, and `vctrs`
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `DataFrameRow` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `DataFrameRow` may come from an old version of the `miniextendr_macros` crate, try updating your dependency with `cargo update -p miniextendr_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: DataFrameRow B1 sibling-collision: a sibling field in the outer enum produces a column name that collides with the discriminant column emitted by a nested inner enum. Rename the sibling field or use `#[dataframe(tag = "...")]` on the inner enum to choose a different discriminant column name.
  --> tests/ui/derive_dataframe_enum_nested_enum_b1_custom_tag_sibling.rs:20:10
   |
20 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `miniextendr_api::markers::assert_no_sibling_field_collision`
  --> $RUST/core/src/panic.rs
   |
   |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
   |
  ::: $WORKSPACE/miniextendr-api/src/markers.rs
   |
   | /                 panic!(
   | |                     "DataFrameRow B1 sibling-collision: a sibling field in the outer enum \
   | |                      produces a column name that collides with the discriminant column emitted \
   | |                      by a nested inner enum. Rename the sibling field or use \
   | |                      `#[dataframe(tag = \"...\")]` on the inner enum to choose a different \
   | |                      discriminant column name."
   | |                 );
   | |_________________- in this macro invocation
